Inidiate curriculum branch

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,22 +101,34 @@
    "source": [
     "Each trip in the Scooter data consists of a `'start_community_area_number'` and an `'end_community_area_number'`.  \n",
     "\n",
-    "The start and end community area number are assigned to two variables below: `trip1_scan` and `trip1_ecan` respectively.\n",
-    "\n",
-    "## Task 1:\n",
-    "Create a new variable, `trip1_st_end_cn` that combines the start community area and the end community area with an underscore. \n"
+    "The start and end community area number are assigned to two variables below: `trip1_scan` and `trip1_ecan` respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "trip1_scan = data[0]['start_community_area_number']\n",
-    "trip1_ecan = data[0]['end_community_area_number']\n",
-    "\n",
-    "# Your code here\n"
+    "trip1_ecan = data[0]['end_community_area_number']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 1:\n",
+    "Create a new variable, `trip1_st_end_cn` that combines the start community area and the end community area with an underscore. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
    ]
   },
   {
@@ -148,24 +160,36 @@
     "# Ints and Floats\n",
     "\n",
     "## Task 2:\n",
-    "Two string variables are defined below named `trip1_dist` and `trip1_time`. \n",
-    "\n",
-    "\n",
-    "  - First: convert these strings to integers or floats. \n",
-    "  - Second: the original units are in meters and seconds. Make a new variable, `trip_mph` which represents speed in mph.  \n",
-    "  \n",
-    "> Hint: to convert meters to miles, divide by 1609.\n"
+    "Two string variables are defined below named `trip1_dist` and `trip1_time`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip1_dist = data[0]['trip_distance']\n",
+    "trip1_time = data[0]['trip_distance']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  - First: convert these strings to integers or floats. \n",
+    "  - Second: the original units are in meters and seconds. Make a new variable, `trip_mph` which represents speed in mph.  \n",
+    "  \n",
+    "> Hint: to convert meters to miles, divide by 1609."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "trip1_dist = data[0]['trip_distance']\n",
-    "trip1_time = data[0]['trip_distance']\n",
     "\n",
     "trip_mpg = None"
    ]
