--- a/index.ipynb
+++ b/index.ipynb
@@ -31,18 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run cell with no changes\n",
     "\n",
@@ -53,8 +44,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from data_import import load_scooter, load_start_end_numbers, load_start_time_and_distance, load_trip_distance, load_start_community_area, load_trip_dictionary\n",
-    "data = load_scooter()"
+    "from data_import import load_scooter, load_start_end_numbers, load_start_time_and_distance, load_trip_distance, load_start_community_area, load_trip_dictionary"
    ]
   },
   {
@@ -75,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +110,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see from the cell output above, the 1st trip started and ended in community area 15."
+    "As you can see from the cell output above, the 1st trip started and ended in Community Area 15. Community Area 15 is named Portage Park."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "community_area_15_name = 'Portage Park'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just like numbers, strings can be joined using the `+` operator. "
    ]
   },
   {
@@ -128,7 +134,21 @@
    "metadata": {},
    "source": [
     "\n",
-    " > Create a new variable, `trip1_st_end_cn` that combines the start community area and the end community area with an underscore for the 1st trip only.  \n"
+    "With the variables defined above - `trip1_scan`, `community_area_15_name`- and the additional variables below, construct the following sentence:\n",
+    "   > \"Trip 1 started in Community Area 15: Portage Park.\"\n",
+    "\n",
+    "Combine the strings using the `+` operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence_beginning = 'Trip 1 started in Community Area '\n",
+    "colon_and_space = ': '\n",
+    "sentence_end_punctuation = '.'"
    ]
   },
   {
@@ -138,30 +158,17 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "\n",
-    "trip1_st_end_cn = None"
+    "answer_sentence = None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'15_15'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#__SOLUTION__\n",
-    "trip1_st_end_cn = trip1_scan + '_' + trip1_ecan\n",
-    "trip1_st_end_cn"
+    "answer_sentence = sentence_beginning + trip1_scan + colon_and_space + community_area_15_name + sentence_end_punctuation"
    ]
   },
   {
@@ -176,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,33 +289,33 @@
    "metadata": {},
    "source": [
     "**Task 2b**: \n",
-    " > create a new variable, `trip_mph`, which represents the average speed of the trip in miles per hour.  \n",
+    " > create a new variable, `trip_distance_miles`, which represents the length of the trip in miles.  \n",
     "  > **hint** 1 mile is roughly equal to 1,609 meters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
     "\n",
-    "trip_mph = None"
+    "trip_distance_miles = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.366765071472965"
+       "2.357364822871349"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,8 +323,8 @@
    "source": [
     "#__SOLUTION__\n",
     "\n",
-    "trip_mph = (int(trip1_dist)/1609)/(int(trip1_time)/(60*60))\n",
-    "trip_mph"
+    "trip_distance_miles = int(trip1_dist)/1609\n",
+    "trip_distance_miles"
    ]
   },
   {
@@ -343,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,12 +397,12 @@
     "The first 7 rides correspond to rides that started in community area 15.  \n",
     "\n",
     "**Task 3b:**\n",
-    "  > Create a new variable, `trips_start_15`, which holds all trip distances that start in area 15. Slice the list using indices.\n"
+    "  > Create a new variable, `trips_start_15` which contains a slice of the list corresponding to the first 7 rides.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,46 +423,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last 30 records are rides starting in community area 31.  \n",
-    "\n",
     "**Task 3c:**\n",
-    "  > Create a new list called `trips_area_31` that consists of only rides that start in area 31."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n",
-    "\n",
-    "trips_area_31 = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#__SOLUTION__\n",
-    "\n",
-    "trips_area_31 = data[-30:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Task 3d:**\n",
     "\n",
     "  > Add a new element to the end of the trip_distances list with the integer 1500."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,12 +479,13 @@
    "metadata": {},
    "source": [
     "**Task 4a**: \n",
+    "  > As you can see in the cell above, trip distance is defined as a `string`.\n",
     "  > Using key value pairs, reassign the `trip_distance` value to the integer 3793."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,12 +507,12 @@
    "metadata": {},
    "source": [
     "**Task 4b**:\n",
-    "  > create a new key value pair within `trip_1` representing average speed of of trip in miles per hour.  Use `mph` as the key, and make sure the value associated with the key is a float."
+    "  > create a new key value pair within `trip_1` representing the name of the start area community name: `Portage Park` .  Use `start_area_community_name` as the key."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,12 +521,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "#__SOLUTION__\n",
-    "trip_1['mph'] = (trip_1['trip_distance']/1609)/(int(trip_1['trip_duration'])/(60*60))"
+    "trip_1['start_area_community_name'] = 'Portage Park'"
    ]
   },
   {
@@ -569,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,12 +641,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Create a simple function named `longest_ride` which takes the a **list of integers as an argument** and **returns the value of the longest ride distance.**"
+    "> Create a simple function named `longest_ride` which takes the a list of integers as a **parameter** and **returns** the largest integer.\n",
+    "\n",
+    "> Passing `trip_distances` as an argument to the function should result in the function returning the distance of the longest ride in meters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,26 +669,6 @@
     "    return max(trip_distances)\n",
     "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15658"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "longest_ride(trip_distances)"
    ]
   },
   {
@@ -724,12 +682,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The original data comes from an API query that return a json object.  We will cover json's soon.  Below, this json object is converted to a list of dictionaries.  "
+    "The original data comes from an API query that returns a json object.  We will cover json's soon.  Below, this json object is converted to a list of dictionaries.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,17 +695,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Below we see the first trip once again as accessed using the first index in the trips_dictionary."
+    "We see the first trip once again as accessed using the first index in the trips_dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +716,7 @@
        " 'end_community_area_number': '15'}"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,10 +729,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a function called `start_area_durations`, which takes two **parameters**:\n",
+    "Create a function called `get_start_area_rides`, which takes two **parameters**:\n",
     "\n",
     "    `start_area`: a string representing the community number of a trip's start community area number.\n",
-    "    `trips_list`: the full **list** of rides imported above.\n",
+    "    `trips_list`: the full **list** of rides imported above as `trips_list`\n",
     "    \n",
     "The function should loop through the rides and select only those which start in the community area fed to it as an argument.\n",
     "\n",
@@ -785,26 +741,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
     "\n",
-    "def start_area_durations():\n",
+    "def get_start_area_rides():\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "#__SOLUTION__\n",
-    "def start_area_durations(start_area, trips_list):\n",
+    "def get_start_area_rides(start_area, trips_list):\n",
+    "    \n",
     "    '''\n",
-    "    Return all rides in a given start area.\n",
+    "    Return a list of all rides for a given start area.\n",
     "    \n",
     "    Params\n",
     "    data: a list of rides, each of which is a dictionary of data.\n",
@@ -813,7 +770,9 @@
     "    returns\n",
     "    community_area_rides: a list of all rides in a given community area\n",
     "    '''\n",
+    "    \n",
     "    community_area_rides = []\n",
+    "    \n",
     "    for ride in data:\n",
     "        if ride['start_community_area_number'] == start_area:\n",
     "            community_area_rides.append(ride)\n",
