--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "You are presented with a data set describing scooter rides.  Chicago rolled out a pilot program for rentable scooters in 2019.\n",
     "\n",
-    "<img src='./img/scooter_pilot.png' height='500' width='500'>"
+    "<a href='https://data.cityofchicago.org/Transportation/E-Scooter-Trips-2019-Pilot/2kfw-zvte'> <img src='./img/scooter_pilot.png'  height='500' width='500'></a>"
    ]
   },
   {
@@ -797,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
