--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -69,16 +69,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run cell with no changes\n",
     "\n",
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -134,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -145,22 +136,14 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(trip1_scan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -171,15 +154,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(trip1_scan)"
    ]
@@ -202,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -242,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -262,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -273,15 +248,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trip 1 started in Community Area 15: Portage Park.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Replace None with the appropriate code\n",
     "answer_sentence = None\n",
@@ -294,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -337,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -355,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -366,15 +333,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trip 1 covered 3793 meters.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The units of distance is meters.\n",
     "print(f\"Trip 1 covered {trip1_dist} meters.\")"
@@ -382,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -393,15 +352,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trip 1 took 1152 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Time is measured in seconds\n",
     "print(f\"Trip 1 took {trip1_time} seconds\")"
@@ -426,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -453,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -498,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -511,7 +462,7 @@
    },
    "outputs": [],
    "source": [
-    "# REplace None with the appropriate code\n",
+    "# Replace None with the appropriate code\n",
     "trip_distance_miles = None\n",
     "\n",
     "### BEGIN SOLUTION\n",
@@ -529,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -590,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -625,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -650,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -698,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -732,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -781,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -794,8 +745,6 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
     "### BEGIN SOLUTION\n",
     "\n",
     "trip_distances.append(1500)\n",
@@ -805,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -849,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -889,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -902,8 +851,6 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
     "### BEGIN SOLUTION\n",
     "\n",
     "trip_1['trip_distance'] = 3793\n",
@@ -913,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -957,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -970,8 +917,6 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
     "### BEGIN SOLUTION\n",
     "\n",
     "trip_1['start_area_community_name'] = 'Portage Park'\n",
@@ -981,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -1025,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1060,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1096,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -1147,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1191,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -1258,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1289,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -1336,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1370,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1381,22 +1326,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'trip_id': '33b50938-5626-4124-ba57-cc0a3dd058aa',\n",
-       " 'trip_distance': '3793',\n",
-       " 'trip_duration': '1152',\n",
-       " 'start_community_area_number': '15',\n",
-       " 'end_community_area_number': '15'}"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trips_list[0]"
    ]
@@ -1426,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1439,7 +1369,7 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here\n",
+    "# Fill in the function below with the appropriate code\n",
     "\n",
     "def get_start_area_rides():\n",
     "    pass\n",
@@ -1478,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": true,
